force-app/main/default/objects/LabsActionPlans__ActionPlanTemplate__c/fields/LabsActionPlans__Archived__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defaults to false to prevent overwriting existing implementations.</description>
    <inlineHelpText>If checked, this template will not be seen in the ActionPlan Template lookup field for Action Plans. It does not affect existing Action Plan records.</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>