force-app/main/default/objects/LabsActionPlans__ActionPlanTemplate__c/fields/LabsActionPlans__Description__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Description__c</fullName>
    <description>The template description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>