force-app/main/default/objects/LabsActionPlans__ActionPlanTemplate__c/fields/LabsActionPlans__ImportId__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__ImportId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used when importing an Action Plan Template via XML. Not needed for templates created in this org.</description>
    <externalId>true</externalId>
    <label>ImportId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>