force-app/main/default/objects/LabsActionPlans__ActionPlanTemplate__c/fields/LabsActionPlans__SkipDay__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__SkipDay__c</fullName>
    <description>Do we pull weekend due dates forward to the end of the previous week or back to the start of the next week?</description>
    <label>Default Weekend Due Dates To</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LabsActionPlans__SkipWeekends__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>LabsActionPlans__SkipDay</valueSetName>
    </valueSet>
</CustomField>