force-app/main/default/objects/LabsActionPlans__ActionPlanTemplate__c/fields/LabsActionPlans__Total__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Total__c</fullName>
    <description>The total number of Template Tasks on the Action Plan Template - currently unused, but intended for test validation and future automation optimizations and assertions</description>
    <inlineHelpText>The count of all Template Tasks on the Action Plan Template</inlineHelpText>
    <label>Template Tasks</label>
    <summaryForeignKey>LabsActionPlans__APTemplateTask__c.LabsActionPlans__Action_Plan_Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>