force-app/main/default/objects/LabsActionPlans__ActionPlanTemplate__c/listViews/LabsActionPlans__All.listView-meta.xml
<ListView>
    <fullName>LabsActionPlans__All</fullName>
    <columns>NAME</columns>
    <columns>LabsActionPlans__Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LabsActionPlans__Archived__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>